--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-hacker
+title: Privacy Security Anonymity Chatrooms Rules
+description: Privacy Security Anonymity Chatrooms Rules
+tagline: Privacy Security Anonymity Chatrooms Rules
