--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-hacker
 title: Privacy Security Anonymity Chatrooms Rules
-description: Privacy Security Anonymity Chatrooms Rules
+description: Community rules for the Privacy Securutiy Anonymity Chatrooms
 tagline: Privacy Security Anonymity Chatrooms Rules
