--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-hacker
 title: Privacy Security Anonymity Chatrooms Rules
 description: Community rules for the Privacy Securutiy Anonymity Chatrooms
 tagline: Privacy Security Anonymity Chatrooms Rules
+include: 
+    - misgendering.md
